# cpp

hw1-long-alg/: CMakeLists.txt  main.cpp
hw1-long-alg/long-alg_lib/: CMakeLists.txt  big_integer.cpp  big_integer.h
hw1-long-alg/tests/: CMakeLists.txt  test1.cpp
